add policy, observer and email function
