# public/docs/openapi.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 servers:
   -
-    url: 'http://localhost'
+    url: 'http://127.0.0.1:8000'
 paths:
   /api/user:
     get:
@@ -44,7 +44,7 @@ paths:
       security: []
   /api/login:
     post:
-      summary: 'Get a JWT via given credentials.'
+      summary: 'Login API'
       description: ''
       parameters:
         -
@@ -61,7 +61,14 @@ paths:
           example: application/json
           schema:
             type: string
-      responses: {  }
+      responses:
+        200:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n \"access_token\": {{token}},\n \"token_type\": \"Bearer\",\n}"
       tags:
         - Endpoints
       requestBody:
@@ -73,19 +80,48 @@ paths:
               properties:
                 email:
                   type: string
-                  description: 'Must be a valid email address.'
-                  example: gulgowski.reva@example.net
+                  description: 'The email of the  user.'
+                  example: superadmin@invoke.com
                 password:
                   type: string
-                  description: 'Must be at least 6 characters.'
-                  example: nituj
+                  description: 'The password of the  user.'
+                  example: password
               required:
                 - email
                 - password
       security: []
   /api/dashboard:
     post:
-      summary: ''
+      summary: Dashboard
+      description: "Check that the service is up. If everything is okay, you'll get a 200 OK Response\n\nOtherwise, the request will fail with a 400 error, and a response list"
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {{token}}'
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - Endpoints
+  /api/users:
+    post:
+      summary: "User API\nGet all the user by pagination"
       description: ''
       parameters:
         -
@@ -102,10 +138,27 @@ paths:
           example: application/json
           schema:
             type: string
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {{token}}'
+          schema:
+            type: string
       responses: {  }
       tags:
         - Endpoints
-      security: []
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                page:
+                  type: integer
+                  description: 'Page number for pagination.'
+                  example: 1
 tags:
   -
     name: Endpoints
